# game.libretro.mrboom

depends/windows/mingw/: 01-make.bat.in.patch  CMakeLists.txt
